force-app/main/default/objects/Movie_Actor_Rating__c/Movie_Actor_Rating__c.object-meta.xml
<CustomObject>
    <label>Movie Actor Rating</label>
    <nameField>
        <label>Movie_Actor__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie Actor Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>