force-app/main/default/objects/Movie_Actor_Rating__c/fields/ActorName__c.field-meta.xml
<CustomField>
    <fullName>ActorName__c</fullName>
    <label>ActorName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>