force-app/main/default/objects/Movie_Actor_Rating__c/fields/favourite__c.field-meta.xml
<CustomField>
    <fullName>favourite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>favourite</label>
    <type>Checkbox</type>
</CustomField>