force-app/main/default/objects/Movie_Actor_Rating__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <length>5</length>
    <type>Text</type>
</CustomField>