force-app/main/default/objects/Movie_Actor_Rating__c/fields/unfavourite__c.field-meta.xml
<CustomField>
    <fullName>unfavourite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>unfavourite</label>
    <type>Checkbox</type>
</CustomField>